@@ -6,8 +6,9 @@
   <parent>
     <groupId>org.drools</groupId>
     <artifactId>droolsjbpm-parent</artifactId>
-    <version>5.3.0-SNAPSHOT</version>
-    <relativePath>../droolsjbpm-build-bootstrap/pom.xml</relativePath>
+    <version>5.5.0-SNAPSHOT</version>
+    <!-- relativePath causes out-of-date problems on hudson slaves -->
+    <!--<relativePath>../droolsjbpm-build-bootstrap/pom.xml</relativePath>-->
   </parent>
 
   <groupId>org.jbpm</groupId>
@@ -21,16 +22,16 @@
   <!-- major.minor.micro.Final -->
   <!-- For example: 1.2.3 without the suffix ".Final" corrupts the OSGi eclipse updatesite -->
   <!-- For example: 1.2.3.M2 corrupts the OSGi eclipse updatesite update order -->
-  <version>5.2.0-SNAPSHOT</version>
+  <version>5.4.0-SNAPSHOT</version>
 
   <name>jBPM multiproject</name>
   <description>jBPM: a Business Process Management (BPM) Suite</description>
   <url>http://www.jboss.org/jbpm/</url>
 
   <properties>
-    <!-- Undo the hack on the droolsjbpm-parent pom because Drools 5.3.0 is released without a jBPM release -->
-    <jbpm.version>5.2.0-SNAPSHOT</jbpm.version>
-    <jbpm.osgi.version>5.2.0.SNAPSHOT</jbpm.osgi.version>
+    <jbpm.version>5.4.0-SNAPSHOT</jbpm.version>
+    <jbpm.osgi.version>5.4.0.SNAPSHOT</jbpm.osgi.version>
+    
     <!--
      These are properties used in the database profiles. Some of them must be initialized
      empty so that Maven applies them via filtering to the resources. 
@@ -43,9 +44,10 @@
     <maven.jdbc.db.port/>
     <maven.jdbc.db.server/>     
     <maven.jdbc.driver.jar/>
-    <maven.jdbc.username>sa</maven.jdbc.username>
+    <maven.jdbc.username></maven.jdbc.username>
     <maven.jdbc.password></maven.jdbc.password>
-    <maven.jdbc.url>jdbc:h2:tcp://localhost/JPADroolsFlow</maven.jdbc.url>
+    <maven.jdbc.url>jdbc:h2:</maven.jdbc.url>
+    <maven.jdbc.schema>public</maven.jdbc.schema>
   </properties>
 
   <repositories>
@@ -86,8 +88,19 @@
     <module>jbpm-workitems</module>
     <module>jbpm-human-task</module>
     <module>jbpm-gwt</module>
+    <module>jbpm-test</module>
     <module>jbpm-examples</module>
   </modules>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.9</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <testResources>
@@ -99,6 +112,25 @@
         <directory>src/test/resources</directory>
       </testResource>
     </testResources>
+     <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.6</version>
+          <configuration>
+            <includes>
+              <include>**/*Test.java</include>
+            </includes>
+            <excludes>
+              <exclude>**/*AbstractTest.java</exclude>
+              <exclude>**/*JMS*Test.java</exclude>
+            </excludes>
+            <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
+          </configuration>
+        </plugin> 
+      </plugins>
+    </pluginManagement>
   </build>
 
   <profiles>
@@ -118,49 +150,107 @@
     <profile>
       <id>database</id>
       <dependencies>
-        <!--  Add the downloaded jdbc driver jar for the database to the classpath.
-              Warning: <groupId>, <artifactId> and <version> are just placeholders and do not matter. -->
         <dependency>
-           <groupId>org.jbpm</groupId>
-           <artifactId>downloaded-jdbc-driver-jar</artifactId>
-           <version>1.0</version>
-           <scope>system</scope>
-           <systemPath>${maven.jdbc.driver.jar}</systemPath>
+           <groupId>${maven.jdbc.driver.group}</groupId>
+           <artifactId>${maven.jdbc.driver.artifact}</artifactId>
+           <version>${maven.jdbc.driver.version}</version>
+           <scope>test</scope>
         </dependency>  
       </dependencies>
     </profile>
-    <!-- The following is an example of how to test with a particular database:
+    
     <profile>
-        <id>postgresql</id>
-        <properties>
-          <! see http://docs.jboss.org/hibernate/core/3.6/reference/en-US/html/session-configuration.html#configuration-optional-dialects 
-          <maven.hibernate.dialect>org.hibernate.dialect.PostgreSQLDialect</maven.hibernate.dialect>
-          <!  helpful: http://docs.jboss.org/ironjacamar/userguide/1.0/en-US/html/ex_datasources.html 
-          <maven.datasource.classname>org.postgresql.xa.PGXADataSource</maven.datasource.classname>
-          <maven.jdbc.driver.class>org.postgresql.Driver</maven.jdbc.driver.class>
-          
-          <maven.jdbc.db.name>jbpm3</maven.jdbc.db.name>
-          <maven.jdbc.db.port>5432</maven.jdbc.db.port>
-          <maven.jdbc.db.server>localhost</maven.jdbc.db.server>
-           
-          <! This is the local path of the jdbc driver jar needed 
-          <maven.jdbc.driver.jar>/opt/bin/jenkins-1.409.1/jobs/jbpm5-db/workspace/database/postgresql84/postgresql-8.4-702.jdbc3.jar</maven.jdbc.driver.jar>
-         
-          <maven.jdbc.username>jbpm3</maven.jdbc.username>
-          <maven.jdbc.password>jbpm3</maven.jdbc.password>
-          <maven.jdbc.url>jdbc:postgresql://localhost:5432/jbpm3</maven.jdbc.url>
-        </properties>
+      <id>hibernate-4</id>
+      <dependencyManagement>
         <dependencies>
-          <dependency>
-            <groupId>org.jboss</groupId>
-            <artifactId>downloaded-jdbc-driver-jar</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${maven.jdbc.driver.jar}</systemPath>
+          <dependency> 
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.4.ORM.version}</version>
+            <scope>test</scope>
+            <exclusions>
+              <exclusion>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+              </exclusion>
+            </exclusions>
           </dependency>
-        </dependencies>
+          <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.4.ORM.version}</version>
+            <scope>test</scope>
+            <exclusions>
+              <exclusion>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+              </exclusion>
+           </exclusions>
+          </dependency>
+       </dependencies>
+     </dependencyManagement>
+      
+     <build>
+        <plugins>
+          <plugin>
+            <groupId>com.google.code.maven-replacer-plugin</groupId>
+            <artifactId>maven-replacer-plugin</artifactId>
+            <version>1.4.1</version>
+            <executions>
+              <execution>
+                <id>jpa2-xml-config</id>
+                <phase>process-test-resources</phase>
+                <goals>
+                  <goal>replace</goal>
+                </goals>
+                <configuration>
+                  <includes>
+                    <include>target/*classes/META-INF/JBPMorm.xml</include>
+                    <include>target/*classes/META-INF/persistence.xml</include>
+                  </includes>
+                  <replacements>
+                    <!-- persistence.xml: version -->
+                    <replacement>
+                      <token>(persistence version)="1.0"</token>
+                      <value>$1="2.0"</value>
+                    </replacement>
+                    <!-- persistence.xml: schemaLocation's -->
+                    <replacement>
+                      <token>(http://java.sun.com/xml/ns/persistence/persistence)_1(_0.xsd)</token>
+                      <value>$1_2$2</value>
+                    </replacement>
+                    <replacement>
+                      <token>(http://java.sun.com/xml/ns/persistence/orm)_1(_0.xsd)</token>
+                      <value>$1_2$2</value>
+                    </replacement>
+                    <!-- persistence.xml: BTM tx lookup --> 
+                    <replacement>
+                      <token>(&lt;property name=)"hibernate.transaction.manager_lookup_class"( value=)"org.hibernate.transaction.BTMTransactionManagerLookup"( */&gt;)</token>
+                      <value>$1"hibernate.transaction.jta.platform"$2"org.hibernate.service.jta.platform.internal.BitronixJtaPlatform"$3</value>
+                    </replacement>
+                    <!-- JBPMorm.xml: for the ProcessInstanceInfo.hbm.xml -->
+                    <replacement>
+                      <token>(mapping-file&gt;META-INF/ProcessInstanceInfo.hbm.xml&lt;/mapping-file)</token>
+                      <value>!-- $1 --</value>
+                    </replacement>
+                    <!-- JBPMorm.xml: schema's, version -->
+                    <replacement>
+                      <token>(xsi:schemaLocation="http://java.sun.com/xml/ns/persistence/orm) orm_1_0.(xsd"\n *version=)"1.0"</token>
+                      <value>$1 orm_2_0.$2"2.0"</value>
+                    </replacement>
+                    <!-- JBPMorm.xml: mapping -->
+                    <replacement>
+                      <token>(&lt;!--|):JPA2 REMOVE ME:(--&gt;|)</token>
+                      <value></value>
+                    </replacement>
+                  </replacements>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
-    -->
   </profiles>
-  
+    
 </project>
